pgadmin4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: nodeport
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin4
  name: pgadmin4
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgadmin4
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: nodeport
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/backendkwetter-default: "true"
        io.kompose.service: pgadmin4
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: 392873@student.fontys.nl
            - name: PGADMIN_DEFAULT_PASSWORD
              value: password
          image: dpage/pgadmin4
          name: pgadmin4
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pgadmin-data
      restartPolicy: Always
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-data
status: {}
