userservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.image-pull-policy: Never
    kompose.service.type: nodeport
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: userservice
  name: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: userservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.image-pull-policy: Never
        kompose.service.type: nodeport
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/backendkwetter-default: "true"
        io.kompose.service: userservice
    spec:
      containers:
        - image: userservice
          imagePullPolicy: Never
          name: userservice
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
